--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CA$H - Controle Financeiro</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #4CAF50;
+      font-family: sans-serif;
+      background-color: #f6f6f6;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
     }
     .card {
       background: white;
-      max-width: 400px;
-      margin: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 600px;
+      text-align: center;
+      margin-top: 80px;
+    }
+    h1 {
+      color: #2ecc71;
+    }
+    input[type="file"] {
+      margin-top: 20px;
+    }
+    #resultado {
+      margin-top: 30px;
+      white-space: pre-wrap;
+      text-align: left;
     }
   </style>
 </head>
@@ -30,6 +40,33 @@
     <h1>Bem-vindo ao CA$H</h1>
     <p>Seu controle financeiro e de investimentos.</p>
     <p>Em breve, com IA para categorizar seus gastos automaticamente!</p>
+
+    <input type="file" id="extrato" accept=".pdf" />
+    <button onclick="enviar()">Enviar Extrato</button>
+
+    <div id="resultado"></div>
   </div>
+
+  <script>
+    async function enviar() {
+      const input = document.getElementById('extrato');
+      const file = input.files[0];
+      if (!file) {
+        alert("Selecione um arquivo PDF.");
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append('file', file);
+
+      const response = await fetch('http://localhost:5000/analisar', {
+        method: 'POST',
+        body: formData
+      });
+
+      const data = await response.json();
+      document.getElementById('resultado').textContent = JSON.stringify(data, null, 2);
+    }
+  </script>
 </body>
 </html>
